finished exercises for css-mocks, still have the image spacing bug

--- a/intermediate-js/05-css-mocks/style.scss
+++ b/intermediate-js/05-css-mocks/style.scss
@@ -1,4 +1,4 @@
-* {
+body {
   font-size: 18px;
   margin: 0;
   padding: 0;
@@ -26,8 +26,7 @@ section {
 }
 
 #mock2 {
-  display: flex;
-
+  /*display: flex;*/
   #mock2container {
     margin: auto;
     max-width: 400px;
@@ -55,6 +54,12 @@ section {
   }
 }
 
+@media all and (max-width: 800px) {
+  #mock3 {
+    flex-direction: column;
+  }
+}
+
 #mock3 {
   display: flex;
   justify-content: space-between;
@@ -64,10 +69,9 @@ section {
     position: relative;
     overflow: hidden;
     &:hover {
-      background-color: red;
+      cursor: pointer;
       .hiddenText {
-        /*bottom: 30px;*/
-        transform: translateY(-50px);
+        transform: translateY(-140px);
       }
     }
   }
@@ -77,11 +81,17 @@ section {
   }
 
   .hiddenText {
+    width: 100%;
+    height: 100%;
     transition: transform 1s ease;
-
     background-color: black;
     color: white;
     position: absolute;
-    bottom: -30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    opacity: .7;
+    font-size: 2rem;
   }
 }
